--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,6 +22,7 @@ requirements:
     - typing-extensions >=4.0.1
   run:
     - python >=3.7,<4.0
+    - typing-extensions >=4.0.1
 
 test:
   imports:
