--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,6 +20,7 @@ requirements:
     - pip
     - python >=3.8,<4.0
     - typing-extensions >=4.5.0
+    - setuptools
   run:
     - python >=3.8,<4.0
     - typing-extensions >=4.5.0
